# oratio

./: .gitignore  ANDROID_DEPLOYMENT.md  DEPLOYMENT.md  IOS_DEPLOYMENT.md  README.md  TODO.md  prd.md
apps/mobile/: .env.example  app.json  metro.config.js  package-lock.json  package.json
docs/: architecture.md
services/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/api/app/: auth.py  config.py  db.py  deps.py  main.py
services/api/app/models/: __init__.py  challenges.py  debate.py  evaluations.py  personal.py  profiles.py  sessions.py  text_lab.py  user_settings.py
services/api/app/routers/: challenges.py  debate_ws.py  debates.py  live.py  live_coach_ws.py  profiles.py  progress.py  roleplay_ws.py  sessions.py  settings.py  text_lab.py
services/api/app/schemas/: evaluation.py  profiles.py  sessions.py  text_lab.py
services/api/app/services/: batch_transcribe.py  debate.py  drill_generator.py  evaluator.py  example_generator.py  gemini_config.py  live_coach.py  live_transcriber.py  memory.py  metrics.py  prompts.py  roleplay.py  storage.py  text_lab.py
services/api/scripts/: live_spike.py  roleplay_spike.py
services/api/tests/: fixtures.py  test_evaluation.py  test_live_transcriber.py
supabase/: config.toml  seed.sql  seed_0002_scenarios.sql  seed_0005_coach.sql  seed_0007_subcategories.sql
supabase/migrations/: 0001_init.sql  0002_roleplay.sql  0003_text_lab.sql  0004_personal_model.sql  0005_live_coach.sql  0006_user_settings.sql  0007_subcategories.sql  0008_generated_drills.sql  0009_debates.sql
(+59 files in other folders)
